[tool.poetry]
name = "multi-agents-query-solver"
version = "0.1.0"
description = ""
authors = ["Igorithm <amit1994biswas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.6"
langchain-openai = "^0.1.14"
langchain-community = "^0.2.6"
python-dotenv = "^1.0.1"
langchain-experimental = "^0.0.62"
langchainhub = "^0.1.20"
streamlit = "^1.36.0"
streamlit-chat = "^0.1.1"
exceptiongroup = "^1.2.1"
async-timeout = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
